Bug 1364608 - Stash rval in AsyncIteratorClose. (r=arai)